tests/neg-custom-args/captures/capset-bound2.scala
import caps.*

class IO

def f[cap C](io: IO^{C}) = ???

def test =
  f[{}](???)
  f[{}](???)
  f[{cap}](???)
  f[Nothing](???) // error
  f[String](???) // error
